--- a/dia/en.lproj/Localizable.strings
+++ b/dia/en.lproj/Localizable.strings
@@ -28,7 +28,7 @@
 "Версия позволяет вести контроль за приемами пищи, физической активностью и уровнем глюкозы в крови. Предназначен для пациентов, страдающих диабетом." = "The version allows you to monitor your food intake, physical activity and blood glucose levels. Designed for patients with diabetes.";
 "Дневник питания" = "Food diary";
 "Версия предоставляет функционал для ведения данных о приемах пищи и физической активности. Подходит для пациентов, не болеющих диабетом." = "This version provides functionality for keeping data on food intake and physical activity. Suitable for non-diabetic patients.";
-"Производитель: ФГБУ «НМИЦ им. В.А. Алмазова» Минздрава России. Юридическое лицо зарегистрировано по адресу: Россия, г. Санкт-Петербург, ул. Аккуратова, д. 2., 197341. Свидетельство о регистрации программы для ЭВМ выдано 06.06.2022 за номером 2022661781." = "Manufacturer: National Research Medical Center of the Ministry of Health of Russia. The legal entity is registered at the address: Russia, St. Petersburg, Akkuratova str. 2, 197341. Certificate of registration of the computer program was issued on 06.06.2022 under the number 2022661781.";
+"Производитель: ФГБУ «НМИЦ им. В.А. Алмазова» Минздрава России. Юридическое лицо зарегистрировано по адресу: Россия, г. Санкт-Петербург, ул. Аккуратова, д. 2., 197341." = "Manufacturer: National Research Medical Center of the Ministry of Health of Russia. The legal entity is registered at the address: Russia, St. Petersburg, Akkuratova str. 2, 197341.";
 "Сделанный выбор можно изменить позже в настройках" = "The selection made can be changed later in the settings";
 "Описание" = "Description";
 "Далее" = "Next";
